tests/ui/destructuring-assignment/dont-suggest-wrong-expect-suggestion.stderr
error[E0308]: mismatched types
  --> $DIR/dont-suggest-wrong-expect-suggestion.rs:13:20
   |
LL |     let a: usize;
   |            ----- expected due to this type
...
LL |         opt_field: a,
   |                    ^ expected `usize`, found `Option<usize>`
   |
   = note: expected type `usize`
              found enum `Option<usize>`

error[E0308]: mismatched types
  --> $DIR/dont-suggest-wrong-expect-suggestion.rs:14:20
   |
LL |     let b: usize;
   |            ----- expected due to this type
...
LL |         res_field: b,
   |                    ^ expected `usize`, found `Result<usize, ()>`
   |
   = note: expected type `usize`
              found enum `Result<usize, ()>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
